--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    uri: jdbc:mysql://localhost:3306/customer_manage
+    url: jdbc:mysql://localhost:3306/customer_manage
     username: root
     password: Abc213s
 
